syntax = "proto2";
import "dccl/option_extensions.proto";
import "goby/protobuf/option_extensions.proto";

package goby.test.acomms.protobuf;

message RouteMessage
{
    option (dccl.msg).id = 1;
    option (dccl.msg).max_bytes = 32;
    option (dccl.msg).unit_system = "si";

    required uint64 time = 1 [
        (dccl.field).codec = "_time",
        (dccl.field).in_head = true,
        (dccl.field).units = {prefix: "micro" base_dimensions: "T"}
    ];
    required int32 src = 2 [
        (dccl.field).min = 0,
        (dccl.field).max = 65535,
        (dccl.field).in_head = true
    ];
    required int32 dest = 3 [
        (dccl.field).min = 0,
        (dccl.field).max = 65535,
        (dccl.field).in_head = true
    ];
    required string telegram = 4 [(dccl.field).max_length = 10];
}
